# CourseMate

./: .cspell.json  .env.sample  .envrc  .eslintrc.json  .gitignore  .ignore  .prettierignore  Dockerfile  Dockerfile.work  Makefile  README.md  biome.json  bun.lockb  compose.yml  cspell.json  docker-compose.yml  flake.nix  fly.toml  index.js  lefthook.yml  package-lock.json  package.json  render.yaml  run-psql.sh  setup.sh  tsconfig.json
.github/: pull_request_template.md
.husky/: pre-commit
back/: index.js  package-lock.json  package.json  tsconfig.json
common/: README.md  bun.lockb  consts.ts  package.json  types.ts  typia.ts
front/: .eslintrc.js  app.json  babel.config.js  index.js  package-lock.json  package.json  tsconfig.json
helpers/: prismaHelpers.js
mobile/: babel.config.js  package-lock.json  package.json  tsconfig.json
nix/: prisma.nix  rust-toolchain.nix
prisma/: schema.prisma
routes/: courseRoutes.js  followingRequestRoutes.js  userRoutes.js
runners/: keep-alive.sh
scraper/: .gitignore  Cargo.toml  data.json  default.nix  go.mod  go.sum  main.go  readme.md  rust-toolchain.toml  sample.ts  scrape.go  utils.go
scraper/logging/: actor.go
scraper/src/: io.rs  logger.rs  main.rs  parser.rs  types.rs  urls.rs
server/: .env.docker  .env.sample  .gitignore  .prettierignore  Dockerfile  README.md  bun.lockb  compose.yml  eslint.config.mjs  package-lock.json  package.json  prisma.nix  setup.sh  tsconfig.json  tsconfig.json.bak
test/: fetcher.ts  package.json  server.spec.ts
web/: .env.sample  .eslintrc.cjs  .gitignore  Dockerfile  (+11 more)
(+537 files in other folders)
