[package]
name = "course-mate-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
futures = "0.3.31"
lazy_static = "1.5.0"
reqwest = "0.12.8"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
